projects/rhodes.akn/dist/infrastructure/kubernetes/external-dns/apps.v1.Deployment.external-dns-bind.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-dns-bind
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.21.0
    helm.sh/chart: external-dns-1.21.1
  name: external-dns-bind
  namespace: external-dns-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-bind
      app.kubernetes.io/name: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-dns-bind
        app.kubernetes.io/name: external-dns
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --log-level=info
        - --log-format=text
        - --interval=1m
        - --source=crd
        - --source=gateway-grpcroute
        - --source=gateway-httproute
        - --source=gateway-tcproute
        - --source=gateway-tlsroute
        - --source=gateway-udproute
        - --source=ingress
        - --source=service
        - --policy=sync
        - --registry=txt
        - --txt-owner-id=external-dns.rhodesakn
        - --managed-record-types=A
        - --managed-record-types=TXT
        - --provider=rfc2136
        - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
        - --crd-source-kind=DNSEndpoint
        - --gateway-label-filter=external-dns.chezmoi.sh/zone in (internal)
        - --rfc2136-host=10.128.0.3
        - --rfc2136-port=53
        - --rfc2136-zone=chezmoi.sh
        - --rfc2136-tsig-keyname=external-dns.
        - --rfc2136-tsig-secret-alg=hmac-sha256
        - --rfc2136-tsig-axfr
        image: oci.chezmoi.sh/registry.k8s.io/external-dns/external-dns:v0.21.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: external-dns
        ports:
        - containerPort: 7979
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      securityContext:
        fsGroup: 45679
        runAsGroup: 45679
        runAsNonRoot: true
        runAsUser: 45679
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: external-dns-bind
