projects/rhodes.akn/dist/infrastructure/kubernetes/external-dns/apps.v1.Deployment.external-dns-unifi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: external-dns-unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.21.0
    helm.sh/chart: external-dns-1.21.1
  name: external-dns-unifi
  namespace: external-dns-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-unifi
      app.kubernetes.io/name: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: external-dns-unifi
        app.kubernetes.io/name: external-dns
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --log-level=info
        - --log-format=text
        - --interval=1m
        - --source=crd
        - --source=gateway-grpcroute
        - --source=gateway-httproute
        - --source=gateway-tcproute
        - --source=gateway-tlsroute
        - --source=gateway-udproute
        - --source=ingress
        - --source=service
        - --policy=sync
        - --registry=txt
        - --txt-owner-id=external-dns.rhodesakn
        - --managed-record-types=A
        - --managed-record-types=TXT
        - --provider=webhook
        - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
        - --crd-source-kind=DNSEndpoint
        - --annotation-filter=external-dns.alpha.kubernetes.io/zone in (external)
        image: oci.chezmoi.sh/registry.k8s.io/external-dns/external-dns:v0.21.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: external-dns
        ports:
        - containerPort: 7979
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      - env:
        - name: UNIFI_HOST
          value: https://10.10.10.10
        - name: UNIFI_EXTERNAL_CONTROLLER
          value: "false"
        - name: UNIFI_API_KEY
          valueFrom:
            secretKeyRef:
              key: api-key
              name: external-dns-unifi-secret
        - name: LOG_LEVEL
          value: info
        image: oci.chezmoi.sh/ghcr.io/kashalls/external-dns-unifi-webhook:v0.5.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: http-webhook
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: webhook
        ports:
        - containerPort: 8080
          name: http-webhook
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: http-webhook
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 45678
        runAsGroup: 45678
        runAsNonRoot: true
        runAsUser: 45678
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: external-dns-unifi
