projects/rhodes.akn/dist/infrastructure/kubernetes/external-dns/core.v1.Service.external-dns-unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: external-dns-unifi
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/version: 0.21.0
    helm.sh/chart: external-dns-1.21.1
  name: external-dns-unifi
  namespace: external-dns-system
spec:
  ports:
  - name: http
    port: 7979
    protocol: TCP
    targetPort: http
  - name: http-webhook
    port: 8080
    protocol: TCP
    targetPort: http-webhook
  selector:
    app.kubernetes.io/instance: external-dns-unifi
    app.kubernetes.io/name: external-dns
  type: ClusterIP
