projects/rhodes.akn/dist/infrastructure/kubernetes/external-dns/cilium.io.v2.CiliumNetworkPolicy.allow-external-dns-to-kubernetes-api.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the external-dns-unifi controller to access the Kubernetes API server to watch
      Services, Ingresses and Gateway API routes for DNS record management.
  name: allow-external-dns-to-kubernetes-api
  namespace: external-dns-system
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns-unifi
      app.kubernetes.io/name: external-dns
